--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@types/react-dom": "^17.0.9",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1",
+    "web3-react": "^5.0.5"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
